--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,7 @@ h6 {
           justify-content: space-between;
   max-width: 960px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .site .logo {
@@ -137,6 +138,28 @@ h6 {
   color: #404040;
 }
 
+.site .burger {
+  width: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 6px;
+  position: absolute;
+  right: 30px;
+  top: 40px;
+  display: none;
+}
+
+.site .burger span {
+  border-radius: 5px;
+  height: 3px;
+  background-color: black;
+}
+
 .site .obses {
   background: url(../img/tbg.png) center/cover no-repeat;
   max-width: 1440px;
@@ -150,6 +173,7 @@ h6 {
 }
 
 .site .obses .our .title-top {
+  position: relative;
   font-family: 'Montserrat';
   font-size: 44px;
   line-height: 55px;
@@ -158,11 +182,7 @@ h6 {
   color: #fff;
 }
 
-.site .title {
-  position: relative;
-}
-
-.site .title::after {
+.site .obses .our .title-top::after {
   content: '';
   width: 80px;
   height: 2px;
@@ -186,12 +206,12 @@ h6 {
   padding-bottom: 59px;
 }
 
-.site .x {
+.site .get .x {
   text-align: center;
   margin-bottom: 34px;
 }
 
-.site .x img {
+.site .get .x img {
   margin-top: -26px;
 }
 
@@ -204,9 +224,10 @@ h6 {
   color: #47474F;
   margin: 0 auto;
   margin-bottom: 39px;
+  padding: 0 10px;
 }
 
-.site .touch {
+.site .get .touch {
   border-top: 1px solid #47474F;
   max-width: 161px;
   border-bottom: 2px solid #47474F;
@@ -215,7 +236,7 @@ h6 {
   padding: 13px 33.5px 20px 34.5px;
 }
 
-.site .touch a {
+.site .get .touch a {
   font-family: 'Vollkorn';
   font-size: 16px;
   text-align: center;
@@ -223,7 +244,7 @@ h6 {
   line-height: 20px;
 }
 
-.site .touch::before {
+.site .get .touch::before {
   content: '';
   width: 1px;
   height: 53px;
@@ -234,7 +255,7 @@ h6 {
   bottom: 0;
 }
 
-.site .touch::after {
+.site .get .touch::after {
   content: '';
   width: 1px;
   height: 53px;
@@ -253,7 +274,6 @@ h6 {
 .site .title-how {
   font-family: 'Montserrat';
   font-size: 23px;
-  line-height: 36px;
   text-align: center;
   text-transform: uppercase;
   color: #333333;
@@ -261,32 +281,36 @@ h6 {
   position: relative;
 }
 
-.site .title::after {
+.site .title-how::after {
   content: '';
   width: 80px;
   height: 2px;
+  background-color: rgba(0, 0, 0, 0.09);
   left: calc(50% - 40px);
   bottom: -28px;
-  background: rgba(0, 0, 0, 0.09);
   position: absolute;
 }
 
 .site .brand {
-  max-width: 940px;
-  margin: 0 auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   -webkit-column-gap: 20px;
           column-gap: 20px;
+  max-width: 940px;
+  margin: 0 auto;
+}
+
+.site .brand .brand1 {
+  max-width: 300px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .site .brand h3 {
   font-family: 'Montserrat';
   font-size: 16px;
-  line-height: 20px;
-  text-align: center;
   text-transform: uppercase;
   color: #333333;
   margin-bottom: 20px;
@@ -307,7 +331,7 @@ h6 {
   padding: 50px 87px 50px 86px;
   max-width: 300px;
   max-height: 219px;
-  margin-bottom: 38px;
+  margin: 0 0 38px 0;
 }
 
 .site .project {
@@ -324,6 +348,17 @@ h6 {
   text-transform: uppercase;
   color: #333333;
   margin-bottom: 73px;
+  position: relative;
+}
+
+.site .project .title-project::after {
+  content: '';
+  width: 80px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.09);
+  left: calc(50% - 40px);
+  bottom: -28px;
+  position: absolute;
 }
 
 .site .project .projects {
@@ -338,11 +373,14 @@ h6 {
 
 .site .project .projects .pro {
   background-color: #fff;
+  max-width: 300px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .site .project .projects .img0 {
   max-width: 300px;
-  max-height: 300px;
+  height: 300px;
   margin-bottom: 19px;
 }
 
@@ -386,6 +424,17 @@ h6 {
   text-transform: uppercase;
   color: #333333;
   margin-bottom: 73px;
+  position: relative;
+}
+
+.site .team .inner .title-team::after {
+  content: '';
+  width: 80px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.09);
+  left: calc(50% - 40px);
+  bottom: -28px;
+  position: absolute;
 }
 
 .site .team .inner .teamnates {
@@ -535,13 +584,24 @@ h6 {
   text-align: center;
   text-transform: uppercase;
   color: #333333;
+  position: relative;
+}
+
+.site .intouch .inner .title-intouch::after {
+  content: '';
+  width: 80px;
+  height: 2px;
+  background-color: rgba(0, 0, 0, 0.09);
+  left: calc(50% - 40px);
+  bottom: -28px;
+  position: absolute;
 }
 
 .site .intouch .inner .about {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   text-align: center;
 }
 
@@ -721,6 +781,11 @@ h6 {
   background: rgba(255, 255, 255, 0.2);
 }
 
+.site .form .inner textarea {
+  resize: vertical;
+  min-height: 127px;
+}
+
 .site .form .inner .button {
   max-width: 260px;
   margin: 0 auto;
@@ -779,4 +844,84 @@ h6 {
   font-family: 'Vollkorn';
   font-size: 15px;
   color: rgba(255, 255, 255, 0.4);
+}
+
+@media screen and (max-width: 941px) {
+  .site .brand,
+  .site .project .projects {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 0 10px;
+  }
+}
+
+@media screen and (max-width: 919px) {
+  .site .julu::after {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 899px) {
+  .site .team .inner .teamnates {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 0 10px;
+    row-gap: 20px;
+  }
+  .site .intouch {
+    padding-top: 79px;
+    padding-bottom: 75px;
+  }
+  .site .intouch .about {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 0 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .site .obses .our .title-top {
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .site .form {
+    padding: 10px 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .site .burger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .site .menu {
+    display: none;
+  }
 }
