--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -4,3 +4,21 @@
 	text-align: center;
 	text-transform: uppercase;
 }
+
+@mixin after {
+	content: '';
+	width: 80px;
+	height: 2px;
+	background-color: rgba(0, 0, 0, 0.09);
+	left: calc(50% - 40px);
+	bottom: -28px;
+	position: absolute;
+}
+
+@mixin rasmlar {
+	display: flex;
+	justify-content: center;
+	column-gap: 20px;
+	flex-wrap: wrap;
+	padding: 0 10px;
+}
