--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import'fonts';
 @import'mixin';
 
+
 .site {
 	max-width: 1440px;
 	margin: 0 auto;
@@ -13,8 +14,10 @@
 		justify-content: space-between;
 		max-width: 960px;
 		margin: 0 auto;
+		padding: 0 20px;
 
 	}
+
 
 	.logo {
 		padding: 18px 0;
@@ -34,6 +37,23 @@
 		color: #404040;
 	}
 
+	.burger {
+		width: 50px;
+		display: flex;
+		flex-direction: column;
+		row-gap: 6px;
+		position: absolute;
+		right: 30px;
+		top: 40px;
+		display: none;
+
+		span {
+			border-radius: 5px;
+			height: 3px;
+			background-color: black;
+		}
+	}
+
 	// header end
 	// obses
 	.obses {
@@ -47,31 +67,27 @@
 			max-width: 672px;
 
 			.title-top {
+				position: relative;
 				font-family: 'Montserrat';
 				font-size: 44px;
 				line-height: 55px;
 				text-align: center;
 				text-transform: uppercase;
 				color: #fff;
+
+				&::after {
+					content: '';
+					width: 80px;
+					height: 2px;
+					background-color: #fff;
+					left: calc(50% - 40px);
+					bottom: -28px;
+					position: absolute;
+				}
 			}
 
 
 		}
-
-	}
-
-	.title {
-		position: relative;
-	}
-
-	.title::after {
-		content: '';
-		width: 80px;
-		height: 2px;
-		background-color: #fff;
-		left: calc(50% - 40px);
-		bottom: -28px;
-		position: absolute;
 
 	}
 
@@ -89,66 +105,67 @@
 	.get {
 		background: #FEFEC9;
 		padding-bottom: 59px;
-	}
 
-	.x {
-		text-align: center;
-		margin-bottom: 34px;
-	}
+		.x {
+			text-align: center;
+			margin-bottom: 34px;
+		}
 
-	.x img {
-		margin-top: -26px;
-	}
+		.x img {
+			margin-top: -26px;
+		}
 
-	.get p {
-		max-width: 940px;
-		font-family: 'Vollkorn';
-		font-size: 18px;
-		line-height: 25px;
-		text-align: center;
-		color: #47474F;
-		margin: 0 auto;
-		margin-bottom: 39px;
-	}
+		p {
+			max-width: 940px;
+			font-family: 'Vollkorn';
+			font-size: 18px;
+			line-height: 25px;
+			text-align: center;
+			color: #47474F;
+			margin: 0 auto;
+			margin-bottom: 39px;
+			padding: 0 10px;
+		}
 
-	.touch {
-		border-top: 1px solid #47474F;
-		max-width: 161px;
-		border-bottom: 2px solid #47474F;
-		position: relative;
-		margin: 0 auto;
-		padding: 13px 33.5px 20px 34.5px;
-	}
+		.touch {
+			border-top: 1px solid #47474F;
+			max-width: 161px;
+			border-bottom: 2px solid #47474F;
+			position: relative;
+			margin: 0 auto;
+			padding: 13px 33.5px 20px 34.5px;
+		}
 
-	.touch a {
-		font-family: 'Vollkorn';
-		font-size: 16px;
-		text-align: center;
-		color: #47474F;
-		line-height: 20px;
-	}
+		.touch a {
+			font-family: 'Vollkorn';
+			font-size: 16px;
+			text-align: center;
+			color: #47474F;
+			line-height: 20px;
+		}
 
-	.touch::before {
-		content: '';
-		width: 1px;
-		height: 53px;
-		left: -1px;
-		background-color: #47474F;
-		position: absolute;
-		top: 0;
-		bottom: 0;
-	}
+		.touch::before {
+			content: '';
+			width: 1px;
+			height: 53px;
+			left: -1px;
+			background-color: #47474F;
+			position: absolute;
+			top: 0;
+			bottom: 0;
+		}
 
-	.touch::after {
-		content: '';
-		width: 1px;
-		height: 53px;
-		position: absolute;
-		right: -1px;
-		top: 0;
-		bottom: 0;
-		background-color: #47474F;
+		.touch::after {
+			content: '';
+			width: 1px;
+			height: 53px;
+			position: absolute;
+			right: -1px;
+			top: 0;
+			bottom: 0;
+			background-color: #47474F;
 
+		}
 	}
 
 	// get end
@@ -161,38 +178,34 @@
 	.title-how {
 		font-family: 'Montserrat';
 		font-size: 23px;
-		line-height: 36px;
 		text-align: center;
 		text-transform: uppercase;
 		color: #333333;
 		margin-bottom: 73px;
 		position: relative;
-	}
 
-	.title::after {
-		content: '';
-		width: 80px;
-		height: 2px;
-		left: calc(50% - 40px);
-		bottom: -28px;
-		background: rgba(0, 0, 0, 0.09);
-		position: absolute;
 
+		&::after {
+			@include after;
+		}
 	}
 
 	.brand {
-		max-width: 940px;
-		margin: 0 auto;
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 		column-gap: 20px;
+		max-width: 940px;
+		margin: 0 auto;
 
+		.brand1 {
+			max-width: 300px;
+			margin: 0 auto;
+			text-align: center;
+		}
 
 		h3 {
 			font-family: 'Montserrat';
 			font-size: 16px;
-			line-height: 20px;
-			text-align: center;
 			text-transform: uppercase;
 			color: #333333;
 			margin-bottom: 20px;
@@ -215,7 +228,7 @@
 		padding: 50px 87px 50px 86px;
 		max-width: 300px;
 		max-height: 219px;
-		margin-bottom: 38px;
+		margin: 0 0 38px 0;
 	}
 
 	// how end
@@ -234,6 +247,12 @@
 			text-transform: uppercase;
 			color: #333333;
 			margin-bottom: 73px;
+			position: relative;
+
+
+			&::after {
+				@include after;
+			}
 		}
 
 		.projects {
@@ -246,13 +265,16 @@
 
 			.pro {
 				background-color: #fff;
+				max-width: 300px;
+				margin: 0 auto;
+				text-align: center;
 			}
 
 
 
 			.img0 {
 				max-width: 300px;
-				max-height: 300px;
+				height: 300px;
 				margin-bottom: 19px;
 
 				img {
@@ -296,14 +318,17 @@
 				text-transform: uppercase;
 				color: #333333;
 				margin-bottom: 73px;
+				position: relative;
+
+				&::after {
+					@include after;
+				}
 			}
 
 			.teamnates {
 				display: grid;
 				grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
 				column-gap: 20px;
-
-
 
 				.pro {
 					text-align: center;
@@ -452,11 +477,16 @@
 				text-align: center;
 				text-transform: uppercase;
 				color: #333333;
+				position: relative;
+
+				&::after {
+					@include after;
+				}
 			}
 
 			.about {
 				display: grid;
-				grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+				grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 				text-align: center;
 
 				h4 {
@@ -619,6 +649,11 @@
 				background: rgba(255, 255, 255, 0.2);
 			}
 
+			textarea {
+				resize: vertical;
+				min-height: 127px;
+			}
+
 			.button {
 				max-width: 260px;
 				margin: 0 auto;
@@ -686,4 +721,7 @@
 	}
 
 	// form end
+	// media
+	@import'media';
+	// media end
 }
